--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
           <img
             src="images/logo-small.jpg"
             class="logo d-block d-md-none"
-            alt="Patricia Logo"
+            alt="Elvina"
           />
         </a>
         <ul>
@@ -49,13 +49,13 @@
             <a href="/" title="Homepage"> Home</a>
           </li>
           <li class="active">
-            <a href="/about.html" title="About Patricia"> About</a>
+            <a href="/about.html" title="About Elvina"> About</a>
           </li>
           <li>
-            <a href="/work.html" title="Patricia's work"> Work</a>
+            <a href="/work.html" title="Elvina's work"> Work</a>
           </li>
           <li>
-            <a href="/contact.html" title="Contact Patricia"> Contact</a>
+            <a href="/contact.html" title="Contact Elvina"> Contact</a>
           </li>
         </ul>
       </nav>
@@ -64,8 +64,8 @@
       <div class="row">
         <div class="col-lg-6">
           <div class="content">
-            <h1 class="mb-4">Hi, I’m Patricia Pereira</h1>
-            <h2 class="mb-4">Front-end developer based in Portugal</h2>
+            <h1 class="mb-4">Hi, I’m Elvina</h1>
+            <h2 class="mb-4">Front-end developer based in New York</h2>
             <p class="mb-5">
               I’m currently seeking new opportunities in front-end development.
               I’m open to work remotely and have flexible hours. I’m highly
@@ -75,7 +75,7 @@
           </div>
         </div>
         <div class="col-lg-6">
-          <img src="images/patricia.png" alt="" class="img-fluid" />
+          <img src="images/Elvina.png" alt="" class="img-fluid" />
         </div>
       </div>
     </div>
@@ -89,7 +89,7 @@
           <a
             href="/contact.html"
             class="btn btn-branding mt-3"
-            title="Contact Patricia"
+            title="Contact Elvina"
           >
             Contact me
           </a>
@@ -97,30 +97,30 @@
       </div>
       <div class="d-flex justify-content-center mb-5">
         <a
-          href="mailto:patricia@gmail.com"
+          href="mailto:elvinastarkova@gmail.com"
           class="email-link"
-          title="Email Patricia"
+          title="Email Elvina"
         >
-          patricia@gmail.com
+          elvinastarkova@gmail.com
         </a>
       </div>
       <div class="social-links d-flex justify-content-center">
         <a
-          href="https://www.github.com/patricia"
+          href="https://www.github.com/Elvina"
           target="_blank"
           title="GitHub Profile"
         >
           <i class="fab fa-github"></i>
         </a>
         <a
-          href="https://www.instragram.com/patricia"
+          href="https://www.instragram.com/Elvina"
           target="_blank"
           title="instragram Profile"
         >
           <i class="fab fa-instagram"></i>
         </a>
         <a
-          href="https://www.twitter.com/patricia"
+          href="https://www.twitter.com/Elvina"
           target="_blank"
           title="Twitter Profile"
         >
@@ -128,7 +128,7 @@
         </a>
       </div>
       <p class="text-center mt-5">
-        ✌️ This website was coded by Patricia Pereira, and is
+        ✌️ This website was coded by Elvina, and is
         <a
           href="https://github.com/matthieua/portfolio-project"
           target="_blank"
