--- a/contact.html
+++ b/contact.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Contact Patricia. Patricia is a front-end engineer based in Portugal. "
+      content="Contact Elvina. Elvina is a front-end engineer based in New York. "
     />
-    <title>Contact Patricia - Patricia Pereira</title>
+    <title>Contact Elvina</title>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
@@ -40,12 +40,12 @@
           <img
             src="images/logo.png"
             class="logo d-none d-md-block"
-            alt="Patricia Logo"
+            alt="Elvina Logo"
           />
           <img
             src="images/logo-small.jpg"
             class="logo d-block d-md-none"
-            alt="Patricia Logo"
+            alt="Elvina Logo"
           />
         </a>
         <ul>
@@ -53,13 +53,13 @@
             <a href="/" title="Homepage"> Home</a>
           </li>
           <li>
-            <a href="/about.html" title="About Patricia"> About</a>
+            <a href="/about.html" title="About Elvina"> About</a>
           </li>
           <li>
-            <a href="/work.html" title="Patricia's work"> Work</a>
+            <a href="/work.html" title="Elvina's work"> Work</a>
           </li>
           <li class="active">
-            <a href="/contact.html" title="Contact Patricia"> Contact</a>
+            <a href="/contact.html" title="Contact Elvina"> Contact</a>
           </li>
         </ul>
       </nav>
@@ -69,18 +69,18 @@
         <h1 class="mb-5">Let's get in touch!</h1>
         <h3>Email</h3>
         <p>
-          <a href="mailto:patricia@gmail.com"> patricia@gmail.com </a>
+          <a href="mailto:elvinastarkova@gmail.com"> elvinastarkova@gmail.com </a>
         </p>
         <h3>Twitter</h3>
         <p>
-          <a href="https://www.twitter.com/patricia" target="_blank">
-            @patricia
+          <a href="https://www.twitter.com/elvina" target="_blank">
+            @elvina
           </a>
         </p>
         <h3>Instagram</h3>
         <p>
-          <a href="https://www.instagram.com/patricia.codes" target="_blank">
-            @patricia.codes
+          <a href="https://www.instagram.com/elvina.codes" target="_blank">
+            @elvina.codes
           </a>
         </p>
       </div>
@@ -95,7 +95,7 @@
           <a
             href="/contact.html"
             class="btn btn-branding mt-3"
-            title="Contact Patricia"
+            title="Contact Elvina"
           >
             Contact me
           </a>
@@ -103,30 +103,30 @@
       </div>
       <div class="d-flex justify-content-center mb-5">
         <a
-          href="mailto:patricia@gmail.com"
+          href="mailto:elvinastarkova@gmail.com"
           class="email-link"
-          title="Email Patricia"
+          title="Email Elvina"
         >
-          patricia@gmail.com
+          elvinastarkova@gmail.com
         </a>
       </div>
       <div class="social-links d-flex justify-content-center">
         <a
-          href="https://www.github.com/patricia"
+          href="https://www.github.com/elvina"
           target="_blank"
           title="GitHub Profile"
         >
           <i class="fab fa-github"></i>
         </a>
         <a
-          href="https://www.instragram.com/patricia"
+          href="https://www.instragram.com/elvina"
           target="_blank"
           title="instragram Profile"
         >
           <i class="fab fa-instagram"></i>
         </a>
         <a
-          href="https://www.twitter.com/patricia"
+          href="https://www.twitter.com/elvina"
           target="_blank"
           title="Twitter Profile"
         >
@@ -134,7 +134,7 @@
         </a>
       </div>
       <p class="text-center mt-5">
-        ✌️ This website was coded by Patricia Pereira, and is
+        ✌️ This website was coded by Elvina, and is
         <a
           href="https://github.com/matthieua/portfolio-project"
           target="_blank"
