--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Patricia is a front-end engineer based in Portugal."
+      content="Elvina is a front-end engineer based in New York."
     />
-    <title>Front-end developer - Patricia Pereira</title>
+    <title>Front-end developer - Elvina</title>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
@@ -40,12 +40,12 @@
           <img
             src="images/logo.png"
             class="logo d-none d-md-block"
-            alt="Patricia Logo"
+            alt="Elvina Logo"
           />
           <img
             src="images/logo-small.jpg"
             class="logo d-block d-md-none"
-            alt="Patricia Logo"
+            alt="Elvina Logo"
           />
         </a>
         <ul>
@@ -53,21 +53,21 @@
             <a href="/" title="Homepage"> Home</a>
           </li>
           <li>
-            <a href="/about.html" title="About Patricia"> About</a>
+            <a href="/about.html" title="About Elvina"> About</a>
           </li>
           <li>
-            <a href="/work.html" title="Patricia's work"> Work</a>
+            <a href="/work.html" title="Elvina's work"> Work</a>
           </li>
           <li>
-            <a href="/contact.html" title="Contact Patricia"> Contact</a>
+            <a href="/contact.html" title="Contact Elvina"> Contact</a>
           </li>
         </ul>
       </nav>
     </div>
     <div class="hero">
       <p>👋 Hello, I'm</p>
-      <h1>Patricia Pereira</h1>
-      <h2 class="mb-5">Front-end developer based in Portugal</h2>
+      <h1>Elvina</h1>
+      <h2 class="mb-5">Front-end developer based in New York</h2>
       <div>
         <a href="/contact.html" class="btn btn-branding" title="Contact me"
           >Contact me</a
@@ -160,7 +160,7 @@
             <a
               href="/contact.html"
               class="btn btn-branding mt-3"
-              title="Contact Patricia"
+              title="Contact Elvina"
             >
               Contact me
             </a>
@@ -168,30 +168,30 @@
         </div>
         <div class="d-flex justify-content-center mb-5">
           <a
-            href="mailto:patricia@gmail.com"
+            href="mailto:elvinastarkova@gmail.com"
             class="email-link"
-            title="Email Patricia"
+            title="Email Elvina"
           >
-            patricia@gmail.com
+            elvinastarkova@gmail.com
           </a>
         </div>
         <div class="social-links d-flex justify-content-center">
           <a
-            href="https://www.github.com/patricia"
+            href="https://www.github.com/elvina"
             target="_blank"
             title="GitHub Profile"
           >
             <i class="fab fa-github"></i>
           </a>
           <a
-            href="https://www.instragram.com/patricia"
+            href="https://www.instragram.com/elvina"
             target="_blank"
             title="instragram Profile"
           >
             <i class="fab fa-instagram"></i>
           </a>
           <a
-            href="https://www.twitter.com/patricia"
+            href="https://www.twitter.com/elvina"
             target="_blank"
             title="Twitter Profile"
           >
@@ -199,7 +199,7 @@
           </a>
         </div>
         <p class="text-center mt-5">
-          ✌️ This website was coded by Patricia Pereira, and is
+          ✌️ This website was coded by Elvina, and is
           <a
             href="https://github.com/matthieua/portfolio-project"
             target="_blank"
