--- a/work.html
+++ b/work.html
@@ -36,12 +36,12 @@
           <img
             src="images/logo.png"
             class="logo d-none d-md-block"
-            alt="Patricia Logo"
+            alt="Elvina Logo"
           />
           <img
             src="images/logo-small.jpg"
             class="logo d-block d-md-none"
-            alt="Patricia Logo"
+            alt="Elvina Logo"
           />
         </a>
         <ul>
@@ -49,13 +49,13 @@
             <a href="/" title="Homepage"> Home</a>
           </li>
           <li>
-            <a href="/about.html" title="About Patricia"> About</a>
+            <a href="/about.html" title="About Elvina"> About</a>
           </li>
           <li class="active">
-            <a href="/work.html" title="Patricia's work"> Work</a>
+            <a href="/work.html" title="Elvina's work"> Work</a>
           </li>
           <li>
-            <a href="/contact.html" title="Contact Patricia"> Contact</a>
+            <a href="/contact.html" title="Contact Elvina"> Contact</a>
           </li>
         </ul>
       </nav>
@@ -122,7 +122,7 @@
           <a
             href="/contact.html"
             class="btn btn-branding mt-3"
-            title="Contact Patricia"
+            title="Contact Elvina"
           >
             Contact me
           </a>
@@ -130,11 +130,11 @@
       </div>
       <div class="d-flex justify-content-center mb-5">
         <a
-          href="mailto:patricia@gmail.com"
+          href="mailto:elvinastarkova@gmail.com"
           class="email-link"
-          title="Email Patricia"
+          title="Email Elvina"
         >
-          patricia@gmail.com
+          elvinastarkova@gmail.com
         </a>
       </div>
       <div class="social-links d-flex justify-content-center">
@@ -146,14 +146,14 @@
           <i class="fab fa-github"></i>
         </a>
         <a
-          href="https://www.instragram.com/patricia"
+          href="https://www.instragram.com/elvina"
           target="_blank"
           title="instragram Profile"
         >
           <i class="fab fa-instagram"></i>
         </a>
         <a
-          href="https://www.twitter.com/patricia"
+          href="https://www.twitter.com/elvina"
           target="_blank"
           title="Twitter Profile"
         >
@@ -161,7 +161,7 @@
         </a>
       </div>
       <p class="text-center mt-5">
-        ✌️ This website was coded by Patricia Pereira, and is
+        ✌️ This website was coded by Elvina, and is
         <a
           href="https://github.com/matthieua/portfolio-project"
           target="_blank"
