--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
         <p class="text-center mt-5">
           ✌️ This website was coded by Elvina, and is
           <a
-            href="https://github.com/matthieua/portfolio-project"
+            href="https://github.com/Elvin4ik/SheCodes-Responsive-.git"
             target="_blank"
           >
             open-sourced
